--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=hospital-service
 server.port=9700
-spring.datasource.url=jdbc://postgresql://localhost:5432/hospital_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/hospital_db
 spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
