--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=hospital-service
-server.port=9700
-spring.datasource.url=jdbc:postgresql://localhost:5432/hospital_db
-spring.datasource.username=postgres
-spring.datasource.password=123456
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.show-sql=true
-logging.level.sql=debug
-spring.jpa.hibernate.ddl-auto=validate
+spring.profiles.active=dev
+spring.messages.encoding=UTF-8
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+
+
