add jwt filter & util

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,3 +6,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 logging.level.sql=debug
 spring.jpa.hibernate.ddl-auto=validate
+jwt.secret=IBpfellkZizZR9wQtA0xwdpGrF565gpI
