--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,30 @@
 		    <version>0.12.6</version>
 		    <scope>runtime</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/nz.net.ultraq.thymeleaf/thymeleaf-layout-dialect -->
+		<dependency>
+		    <groupId>nz.net.ultraq.thymeleaf</groupId>
+		    <artifactId>thymeleaf-layout-dialect</artifactId>
+		    <version>3.4.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-thymeleaf</artifactId>
+		    <version>3.4.3</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.xhtmlrenderer/flying-saucer-pdf -->
+		<dependency>
+		    <groupId>org.xhtmlrenderer</groupId>
+		    <artifactId>flying-saucer-pdf</artifactId>
+		    <version>9.11.4</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.github.jtidy/jtidy -->
+		<dependency>
+		    <groupId>com.github.jtidy</groupId>
+		    <artifactId>jtidy</artifactId>
+		    <version>1.0.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
